--- a/resources/sass/clean/elements/blockquote.sass
+++ b/resources/sass/clean/elements/blockquote.sass
@@ -16,7 +16,7 @@ blockquote
         color: $gray-60
 
         @media screen and (max-width: $s-600)
-            font-size: 18px
+            font-size: 18px !important
 
 
 cite
