--- a/resources/sass/clean/elements/button.sass
+++ b/resources/sass/clean/elements/button.sass
@@ -1,14 +1,15 @@
+
 .button, button
     display: inline-block
     margin: 1em 0.1em 0 0
     padding: 0.5em 1em
-    border-radius: 6px
+    border-radius: .25rem
     background-color: $primary-light
-    border: 1px solid $primary-dark
+    border: 2px solid $primary-light
+    font-size: 14px
+    font-weight: 600
     color: #fff
     font-family: $sans
-    font-size: 1em
-    font-weight: 500
     text-align: center
     text-decoration: none
     cursor: pointer
@@ -21,7 +22,11 @@
 
     &:hover
         background-color: $primary-dark
-        border: 1px solid $primary-light
+        border: 2px solid $primary-dark
+
+    &:focus
+        outline-offset: 4px
+        outline-color: $primary-light
 
     &:disabled
         cursor: not-allowed
@@ -32,28 +37,28 @@
 
         &:hover
             box-shadow: none
-            border: 1px solid transparent
+            border: 2px solid transparent
             cursor: initial
 
     &.alt
         background-color: #fff
-        border: 1px solid $primary-dark
-        color: $primary-dark
+        border: 2px solid $primary-light
+        color: $primary-light
 
         &:hover,
         &:focus
             background-color: $primary-dark
-            border: 1px solid $primary-dark
+            border: 2px solid $primary-dark
             color: #fff
 
 
     &.primary
         color: white
         background-color: $primary-light
-        border-color: $primary-dark
+        border-color: $primary-light
 
         &:hover
-            border-color: $primary-light
+            border-color: $primary-dark
             background-color: $primary-dark
             color: white
 
@@ -79,12 +84,12 @@
             color: white
 
         &.alt
-            color: $accent-dark
-            border-color: $accent-dark
+            color: $accent-light
+            border-color: $accent-light
             background-color: transparent
 
             &:hover, &:focus
-                border-color: $accent-light
+                border-color: $accent-dark
                 background-color: $accent-dark
                 color: white
 
@@ -92,18 +97,19 @@
     &.danger
         color: white
         background-color: $error-light
-        border-color: $error-dark
+        border-color: $error-light
 
         &:hover
-            border-color: $error-light
+            border-color: $error-dark
             background-color: $error-dark
 
         &.alt
-            border: 1px solid $error-dark
+            border: 1px solid $error-light
             color: $error-light
             background-color: white
 
             &:hover, &:focus
+                border-color: $error-dark
                 color: white
                 background-color: $error-dark
 
@@ -123,8 +129,9 @@
             background-color: white
 
             &:hover, &:focus
+                border-color: #186c77
                 color: white
-                background-color: $info-light
+                background-color: #186c77
 
 
     &.success
@@ -134,16 +141,16 @@
 
         &:hover
             background-color: $success-dark
-            border-color: $success-light
+            border-color: $success-dark
 
         &.alt
-            border: 1px solid $success-dark
+            border: 1px solid $success-light
             color: $success-light
             background-color: white
 
             &:hover, &:focus
                 color: white
-                border: 1px solid $success-light
+                border-color: $success-dark
                 background-color: $success-dark
 
 
@@ -158,13 +165,13 @@
             color: white
 
         &.alt
-            border: 1px solid $warning-dark
+            border: 1px solid $warning-light
             color: $warning-light
             background-color: white
 
             &:hover, &:focus
                 color: white
-                border-color: $warning-light
+                border-color: $warning-dark
                 background-color: $warning-dark
 
 
@@ -185,7 +192,7 @@
 
         &:hover
             background-color: $black
-            border-color: $gray-0
+            border-color: $black
             color: $gray-0
 
 
@@ -223,15 +230,10 @@
         opacity: 0.3
 
 
-button.close-button
-    border: 1px solid transparent
-
-    &:hover
-        background-color: rgba(0, 0, 0, 0.3)
-
-
 .close-button
-    margin: 0
+    margin: 0 !important
+    width: auto
+    border: none
     display: inline-block
     padding: 0.5em 1em
     vertical-align: middle
@@ -243,9 +245,18 @@ button.close-button
     box-sizing: border-box
     user-select: none
     font-family: $sans
+    background-color: transparent
+
+    &:hover
+        border: none
+        background-color: rgba(0, 0, 0, 0.3)
 
 
-.link-button
+button.link-button,
+a.link-button
+    font-size: 16px
+    font-weight: 400
+    text-transform: none
     background-color: transparent
     border-color: transparent
     color: $text
@@ -256,10 +267,6 @@ button.close-button
         color: $primary-dark
 
 
-.accordion-button
-    background-color: $accent-light
-    border-color: $accent-light
-    color: $black
 
 
 .scroll-to-top-button
@@ -275,8 +282,8 @@ button.close-button
         color: white
 
 
-.button-square,
-.button-circle
+button.button-square,
+button.button-circle
     aspect-ratio: 1
     display: flex
     align-items: center
@@ -284,6 +291,9 @@ button.close-button
     width: 30px
     height: 30px
     text-decoration: none
+
+    i
+        margin-right: 0
 
 
 .button-circle
@@ -300,10 +310,11 @@ button.close-button
         display: flex
 
 
-.button-group, .pagination-group
+.button-group, .pagination
     display: flex
     flex-direction: row
     flex-wrap: nowrap
+
 
 
 .button-group
@@ -312,12 +323,12 @@ button.close-button
     button
         margin-top: 0
 
-    .clean-modal-content
+    .modal-content
         button
             margin-top: 1em
 
 
-.pagination-group
+.pagination
     justify-content: center
     column-gap: 0.25em
 
@@ -334,6 +345,8 @@ button.close-button
     .button.active
         &:hover, &:active
             background-color: $gray-80
+            color: white
+            border-color: $gray-80
 
 
 @media screen and (max-width: 550px)
