--- a/resources/sass/clean/meta/font.sass
+++ b/resources/sass/clean/meta/font.sass
@@ -3,6 +3,8 @@ $fs-12: 0.75em
 $fs-14: 0.875em
 $fs-16: 1em
 $fs-18: 1.125em
+$fs-20: 1.25em
+$fs-22: 1.375em
 $fs-24: 1.5em
 $fs-36: 2.25em
 $fs-48: 3em
@@ -48,6 +50,11 @@ $fs-64: 4em
 .fs-18
     font-size: $fs-18
 
+.fs-20
+    font-size: $fs-20
+
+.fs-22
+    font-size: $fs-22
 
 .fs-24
     font-size: $fs-24
@@ -68,6 +75,13 @@ $fs-64: 4em
 .uppercase
     text-transform: uppercase
 
+
+.italic
+    font-style: italic
+
+.extrabold
+    font-weight: 800
+
 .bold
     font-weight: 700
 
@@ -76,6 +90,9 @@ $fs-64: 4em
 
 .medium
     font-weight: 500
+
+.normal
+    font-weight: 400
 
 .word-break
     word-break: break-word
