--- a/resources/sass/clean/structure/panel.sass
+++ b/resources/sass/clean/structure/panel.sass
@@ -6,45 +6,11 @@
 
     p
         color: inherit !important
-// needed
+        // needed
+        margin: 0
 
 
 .box
     padding-left: 1em
     padding-right: 1em
 
-
-.panel.warning
-    color: $warning-dark
-    background-color: $warning-pale
-
-    &:hover
-        color: $warning-dark
-        background-color: $warning-pale
-
-.panel.success
-    color: $success-dark
-    background-color: $success-pale
-
-    &:hover
-        color: $success-dark
-        background-color: $success-pale
-
-
-.panel.danger,
-.panel.error
-    color: $error-dark
-    background-color: $error-pale
-
-    &:hover
-        color: $error-dark
-        background-color: $error-pale
-
-
-.panel.info
-    color: $info-dark
-    background-color: $info-pale
-
-    &:hover
-        color: $info-dark
-        background-color: $info-pale
