--- a/resources/sass/clean/elements/form.sass
+++ b/resources/sass/clean/elements/form.sass
@@ -1,6 +1,16 @@
 form
     width: 100%
 
+    fieldset
+        margin-top: 1.4em !important
+
+        & > label:first-of-type
+            margin-top: 0
+
+        &:first-child
+            margin-top: 0
+
+
 input[type="text"],
 input[type="search"],
 input[type="number"],
@@ -12,7 +22,7 @@ input[type="time"],
 input[type="url"],
 select,
 textarea
-    border-radius: 6px
+    border-radius: 4px
     font-family: $sans
     padding: 0.6em 0.6em
     font-size: 1em
@@ -35,9 +45,10 @@ input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="url"]:focus,
 select:focus
-    border: 1px solid $primary-light
-    outline: 0
-
+    border: 1px solid $info-light
+    outline-offset: 2px
+    outline-color: $info-light
+    outline-width: 4px
 
 input
     overflow: hidden
@@ -54,10 +65,12 @@ input[readonly]
 
 input[type="radio"],
 input[type="checkbox"]
+    position: relative
+    top: 3px
     cursor: pointer
     width: 1.25em
     height: 1.25em
-    margin: 0.6em 0.25em 1em 0
+    margin: 0.25em 0.5em 0.5em 0
 
     &:disabled
         cursor: not-allowed
@@ -70,6 +83,11 @@ input[type="checkbox"]
 input[type="radio"]
     accent-color: $primary-light
 
+    &:focus
+        outline-offset: 2px
+        outline-color: $info-light
+        outline-width: 4px
+
 
 label ~ input[type="radio"]
     display: inline-block
@@ -80,11 +98,14 @@ label
     display: block
 
     span
-        color: green
+        color: inherit
 
 
 input[type="checkbox"]:checked
     accent-color: $primary-light
+    outline-offset: 4px
+    outline-color: $info-light
+    outline-width: 4px
 
 
 .checkbox-container
@@ -123,3 +144,13 @@ select
 
 .disabled *, :disabled *
     pointer-events: none
+
+.form-row
+    padding: 0 0.5em
+    margin: 1.4em -1em 1em
+
+    & > .col
+        padding: 0 0.5em
+
+.small-input
+    height: 33px
