--- a/resources/sass/clean/structure/footer.sass
+++ b/resources/sass/clean/structure/footer.sass
@@ -8,7 +8,7 @@ footer
     background-color: $bg-content
 
     a
-        text-decoration: none
+        //text-decoration: none
         color: $gray-40
 
         &:hover
