--- a/resources/sass/clean/structure/header.sass
+++ b/resources/sass/clean/structure/header.sass
@@ -3,10 +3,10 @@ header
     background-color: $gray-0
 
     a
-        color: $primary-light
+        color: $link
 
         &:hover
-            color: $primary-dark
+            color: $gray-80
 
 
 .pointer.darkmode-toggle
@@ -66,31 +66,55 @@ html.dark
             color: lightblue
 
     #mobile-menu
-        padding: 60px 0.5em 0.5em
+        padding: 60px 0 0.5em
 
         .user-dropdown-menu
-            margin-top: 0
+            margin-top: 1em
 
         #main-menu
             display: flex
-            row-gap: 1em
+            row-gap: 0
             flex-direction: column
             align-items: flex-start
             font-size: 18px
 
             a
+                margin: 0
+                padding-left: 1em
+                padding-top: 0.5em
+                padding-bottom: 0.5em
+                border-left: 6px solid transparent
+                border-bottom: 1px solid $gray-20
+                width: 100%
+                display: inline-block
+
+                &:hover
+                    background-color: $gray-20
+
                 &.active
+                    background-color: $gray-20
+                    border-left: 6px solid $black
                     font-weight: 700
 
                 i
                     margin-right: 4px
 
+            .user-dropdown-menu
+                margin-top: 0
+
+            .dropdown-click
+                width: 100%
+                padding-top: 0
+
+
             .dropdown-content
                 display: flex
                 flex-direction: column
-                line-height: 2
-                padding-left: 2em
+                padding-left: 1.5em
+                padding-top: 0
                 border: none
                 position: initial
-                width: calc(300px - 1em)
+                width: 300px
+                box-shadow: none
+                background-color: transparent
 
