--- a/resources/sass/clean/theme/overwrites/memolife.sass
+++ b/resources/sass/clean/theme/overwrites/memolife.sass
@@ -17,6 +17,10 @@ h2, h3, h4, h5, h6
     line-height: 150%
     letter-spacing: 1px
 
+.button, button
+    font-size: 14px
+    font-weight: 500
+    text-transform: uppercase
 
 header.page-header
     background-color: $primary-dark !important
@@ -81,7 +85,7 @@ header.page-header
 
 
 .sidenav
-    background-color: #fadca5
+    background-color: $sidenav
 
     #main-menu
         a:not(.dropdown-item)
@@ -497,4 +501,10 @@ footer.page-footer.public-footer
                     height: 3px
                     background: $primary-dark
 
+.ql-toolbar
+    .ql-formats
+        button
+            margin-top: 0
 
+.ql-editor
+    font-size: 18px
