--- a/resources/sass/custom/general.sass
+++ b/resources/sass/custom/general.sass
@@ -16,40 +16,9 @@ body
     width: 100%
     max-width: 100%
 
-header .fa
-    margin: 0 4px
-
-.logo a
-    display: flex
-    align-items: center
-    column-gap: 0.5em
-    flex-wrap: nowrap
-
-
-    img
-        height: 34px
-        width: auto
-
-
 .dropdown-click
     .fa
         margin: 0 4px
-
-
-.main-navigation
-    display: flex
-    align-items: center
-
-    nav
-        display: inline-flex
-        align-items: center
-
-        @media screen and (max-width: 1115px)
-            display: none
-
-#hamburger-menu-button
-    @media screen and (min-width: 1115px)
-        display: none
 
 html.dark
     .scroll-to-top-button
@@ -96,33 +65,14 @@ html.dark
 
 
 [x-cloak], .hidden
-    // reason: important not to overwrite
     display: none !important
-
+// reason: important not to overwrite
 
 fieldset
     padding: 0
     border: none
 
-.breadcrumb
-    @media screen and (max-width: 550px)
-        overflow-x: auto
-        justify-content: center
 
-    ol
-        list-style-type: none
-        display: flex
-        flex-wrap: nowrap
-        gap: 0.5em
-        padding-left: 0
-        padding-right: 0
-        margin-bottom: 0
-        margin-top: 0
-        font-size: 14px
-
-        @media screen and (max-width: 550px)
-            width: max-content
-            justify-content: center
 
 
 .notification
@@ -159,6 +109,7 @@ fieldset
     justify-items: stretch
     align-items: center
     column-gap: 1em
+    row-gap: 1em
     grid-template-columns: repeat(auto-fill, minmax(260px, 1fr))
     justify-content: space-between
     list-style-type: none
@@ -185,7 +136,122 @@ fieldset
     padding: 0.25em 0.5em
     margin-top: 0.25em
     font-size: 14px
-    font-weight: 700
-    border-radius: 6px
-    color: #fff
-    background-color: $red
+    font-weight: 600
+    border-radius: 4px
+    border-left: 0.5rem solid $error-light
+    //color: $error-light
+    background-color: $error-pale
+
+.goldenrod
+    color: goldenrod !important
+
+.gold
+    color: gold !important
+
+.width-65
+    width: 65%
+
+.width-45
+    width: 45%
+
+.margin-bottom-45
+    margin-bottom: 45px
+
+#event-link-mobile-menu
+    width: 40px
+    display: flex
+    text-align: center
+    align-items: center
+    justify-content: center
+    color: $gray-20
+    border-color: $gray-20
+
+    &:hover
+        color: white
+        border-color: white
+        background-color: transparent
+
+
+#osm-map
+    width: 100%
+    height: 300px
+
+.overflow-y-hidden
+    overflow-y: hidden !important
+
+.overflow-x-hidden
+    overflow-x: hidden !important
+
+.border-top-none
+    border-top: none !important
+
+.margin-top-none
+    margin-top: 0 !important
+
+.grayscale-0
+    filter: grayscale(0)
+
+.grayscale-60
+    filter: grayscale(60)
+
+.justify-center
+    justify-content: center
+
+.single-post-title
+    line-height: 1.2
+    word-break: break-word
+
+.word-break
+    word-break: break-word
+
+
+.a2a_buttons
+    display: inline-block
+
+    a
+        margin-left: 0.15em
+        border-radius: 0.5em
+        border: 1px solid transparent
+        display: inline-block
+
+
+    .a2a_button_facebook
+        background-color: rgb(24, 119, 242)
+
+        &:hover, &:focus
+            background-color: darken(rgb(24, 119, 242), 15%)
+
+
+    .a2a_button_whatsapp
+        background-color: rgb(18, 175, 10)
+
+        &:hover, &:focus
+            background-color: darken(rgb(18, 175, 10), 15%)
+
+
+    .a2a_button_facebook_messenger
+        background-color: rgb(0, 132, 255)
+
+        &:hover, &:focus
+            background-color: darken(rgb(0, 132, 255), 15%)
+
+
+    .a2a_button_telegram
+        background-color: rgb(44, 165, 224)
+
+        &:hover, &:focus
+            background-color: darken(rgb(44, 165, 224), 15%)
+
+
+    .a2a_button_email
+        background-color: rgb(1, 102, 255)
+
+        &:hover, &:focus
+            background-color: darken(rgb(1, 102, 255), 15%)
+
+
+    .a2a_button_print
+        background-color: rgb(1, 102, 255)
+
+        &:hover, &:focus
+            background-color: darken(rgb(1, 102, 255), 15%)
