--- a/resources/sass/custom/header.sass
+++ b/resources/sass/custom/header.sass
@@ -12,17 +12,9 @@ header.page-header
         display: flex
         flex-direction: row
         flex-wrap: nowrap
-        justify-content: flex-start
+        justify-content: space-between
         align-items: center
         gap: 0.5em
-
-        a.button
-            margin-top: 0
-
-            &.primary.alt
-                color: white
-                &:hover, &:focus
-                    color: $primary-dark
 
         .dropdown-item
             display: block
@@ -30,11 +22,42 @@ header.page-header
 
         nav
             a:not(.dropdown-item)
-                margin: 0 1em
-                //padding: 0 0.5em
+                margin: 0 0.5em
+                padding: 0 0.5em
                 text-decoration: underline
 
             .dropdown-item
                 display: block
                 margin-bottom: 0.5em
+
+
+.main-navigation
+    display: flex
+    align-items: center
+
+    nav
+        display: inline-flex
+        align-items: center
+
+        @media screen and (max-width: 1115px)
+            display: none
+
+#hamburger-menu-button
+    @media screen and (min-width: 1115px)
+        display: none
+
+
+header .fa
+    margin: 0 4px
+
+.logo a
+    display: flex
+    align-items: center
+    column-gap: 0.5em
+    flex-wrap: nowrap
+
+
+    img
+        height: 36px
+        width: auto
 /* HEADER END */
