--- a/resources/sass/clean/meta/margin.sass
+++ b/resources/sass/clean/meta/margin.sass
@@ -31,3 +31,12 @@ $directions: ("left", "right", "top", "bottom")
     .margin-right-left-#{$margin}
         margin-left: $i
         margin-right: $i
+
+
+.margin-left-right-auto,
+.margin-right-left-auto
+    margin: 0 auto
+
+.margin-top-bottom-auto,
+.margin-bottom-top-auto
+    margin: auto 0
