minor header button and darkmode fixes

--- a/resources/sass/clean/meta/darkmode.sass
+++ b/resources/sass/clean/meta/darkmode.sass
@@ -162,6 +162,11 @@ html.dark,
             background-color: $gray-20
 
 
+    .alert
+        .alert-message
+            color: $text
+
+
     .tooltip
         .tooltip-content
             background-color: $gray-20
