--- a/resources/sass/clean/structure/header.sass
+++ b/resources/sass/clean/structure/header.sass
@@ -9,8 +9,10 @@ header
             color: $gray-80
 
 
-.pointer.darkmode-toggle
-    margin-right: 0.5em
+    .pointer.darkmode-toggle
+        margin-right: 0.5em
+        width: auto
+        display: inline-block
 
 #main-menu-offcanvas-toggle
     margin: 0
