--- a/resources/sass/clean/structure/header.sass
+++ b/resources/sass/clean/structure/header.sass
@@ -86,15 +86,15 @@ html.dark
                 padding-top: 0.5em
                 padding-bottom: 0.5em
                 border-left: 6px solid transparent
-                border-bottom: 1px solid $gray-20
+                border-bottom: 1px solid $sidenav-active-light
                 width: 100%
                 display: inline-block
 
                 &:hover
-                    background-color: $gray-20
+                    background-color: $sidenav-hover-light
 
                 &.active
-                    background-color: $gray-20
+                    background-color: $sidenav-active-light
                     border-left: 6px solid $black
                     font-weight: 700
 
@@ -120,3 +120,9 @@ html.dark
                 box-shadow: none
                 background-color: transparent
 
+
+.logout
+    display: inline-block
+
+    .logout-button
+        margin-top: 0
