--- a/resources/sass/clean/theme/memolife.sass
+++ b/resources/sass/clean/theme/memolife.sass
@@ -27,7 +27,13 @@ $bg-content: #444b50
 $primary-darkmode: #ffceac
 $primary-darkmode-hover: #ffebde
 
-$sidenav: #fffbf3
+$sidenav: #d2d1cd
+//$sidenav-dark: #778588
+$sidenav-dark: #596466
+$sidenav-hover: #647B81
+$sidenav-hover-light: #adb9bb
+$sidenav-active: #445458
+$sidenav-active-light: #8e989a
 
 
 $pale-dark: $accent-dark
