--- a/resources/sass/custom/admin.sass
+++ b/resources/sass/custom/admin.sass
@@ -31,6 +31,9 @@
             grid-template-columns: 100%
             grid-template-areas: "main-content" "sidebar"
 
+        .roles-permissions-bar
+            background-color: $gray-10
+
         main
             border-radius: 0.5em
             border: 1px solid $gray-20
