update: Customize error pages

--- a/resources/sass/main.sass
+++ b/resources/sass/main.sass
@@ -5,6 +5,7 @@
 @import 'custom/public'
 @import 'custom/header'
 @import 'custom/footer'
+@import 'custom/error_page'
 
 //@import 'custom/categories'
 //@import 'custom/calendar'
