clean.css updates

--- a/resources/sass/clean/meta/margin.sass
+++ b/resources/sass/clean/meta/margin.sass
@@ -35,7 +35,8 @@ $directions: ("left", "right", "top", "bottom")
 
 .margin-left-right-auto,
 .margin-right-left-auto
-    margin: 0 auto
+    margin-left: auto
+    margin-right: auto
 
 .margin-top-bottom-auto,
 .margin-bottom-top-auto
