--- a/resources/sass/clean/meta/darkmode.sass
+++ b/resources/sass/clean/meta/darkmode.sass
@@ -209,7 +209,7 @@ html.dark,
         #mobile-menu
             #main-menu
                 a
-                    border-bottom: 1px solid $gray-20
+                    border-bottom: 1px solid $gray-40
                     color: white !important
                     &:hover
                         background-color: $sidenav-hover
@@ -220,9 +220,18 @@ html.dark,
                     border-left: 6px solid $bg-dark
                     font-weight: 700
 
-    .admin .admin-content
-        aside div.sidebar-content .navbar-nav li a.nav-link:hover
-            background-color: $gray-60
+
+    .admin
+        .admin-content
+            aside
+                header
+                    background-color: $bg-content
+        aside
+            div.sidebar-content
+                .navbar-nav
+                    li
+                        a.nav-link:hover
+                            background-color: $gray-60
 
         .roles-permissions-bar
             background-color: $gray-60
@@ -231,3 +240,10 @@ html.dark,
     .dashboard-card-grid .card
         background-color: $bg-content
 
+
+    .user-dropdown-menu
+        .dropdown-content
+            .dropdown-item
+                color: #eeeeee !important
+                &:hover
+                    color: white !important
