--- a/resources/sass/clean/theme/memolife.sass
+++ b/resources/sass/clean/theme/memolife.sass
@@ -80,7 +80,12 @@ h1, h2, h3, h4, h5, h6
 .brand
     font-family: $brand
     font-weight: 700
-    letter-spacing: 2px
+    letter-spacing: 1px
+    color: #eee !important
+    font-size: 18px
+    text-decoration: none
+    &:hover
+        color: white !important
 
 
 @mixin primary-gradient
