--- a/resources/sass/custom/general.sass
+++ b/resources/sass/custom/general.sass
@@ -1,4 +1,3 @@
-
 body
     min-width: 320px
     max-width: 1920px
@@ -18,7 +17,8 @@ body
 
 .dropdown-click
     .fa
-        margin: 0 4px
+        //margin: 0 4px
+
 
 html.dark
     .scroll-to-top-button
@@ -71,8 +71,6 @@ html.dark
 fieldset
     padding: 0
     border: none
-
-
 
 
 .notification
